# XtaTools

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
example/: README.md  common.py  drcov_exporter.py  inject_a2c.py  inject_c2c.py  inject_e2c.py  inject_s2c.py  inject_x2c.py  show_coverage.py
example/inject_a2c_data/shellcode/: Makefile  change_args.out  change_args.s
example/inject_c2c_data/: INJECTCODETEMPLATE.EXE.A7256386BAF4DFBFAC5865FD0DB424E4.6BF6A824D8E01D39DD17A63D9204D9CB.mp.1.jc
example/inject_s2c_data/: INVISIBLEJMP.EXE.ACB479C0F066D29E0704F7B1C44EE4BB.F394A17EF5329D8EFDF79CFFABFBABBD.mp.1.jc
example/inject_s2c_data/shellcode/: Makefile  shellcode.out  shellcode.s
example/inject_x2c_data/: TEST_X86.EXE.0D704AE98B943081E5E9532627C21CC3.EA101948E097853A1DBD8DCD3F23D197.mp.1.jc
example/show_coverage_data/: BRANCH.EXE.B4DA06B11F6FC8D0BA6DB6429826FF51.4F509D1C25724F05EF5BDE17331477F4.mp.1.jc
src/xta_tools/: __init__.py  utils.py  xta_cache.py  xta_manip.py
third-party-licenses/: COPYRIGHT.txt  README.md
